DFfullcopybackup/force-app/main/default/objects/APTS_Vendor__c/APTS_Vendor__c.object-meta.xml
<CustomObject>
    <description>De-normalized table to consolidate all the vendors from SAP tables for quoting</description>
    <label>Vendor</label>
    <nameField>
        <displayFormat>VEN-{0000}</displayFormat>
        <label>Vendor ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Vendors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>