DFfullcopybackup/force-app/main/default/objects/APTS_Vendor__c/fields/APTS_Vendor_Acct_Group_ID__c.field-meta.xml
<CustomField>
    <fullName>APTS_Vendor_Acct_Group_ID__c</fullName>
    <description>Vendor Acct Group ID from SAP</description>
    <inlineHelpText>Vendor Acct Group ID from SAP</inlineHelpText>
    <label>Vendor Account Group ID</label>
    <length>5</length>
    <type>Text</type>
</CustomField>