DFfullcopybackup/force-app/main/default/objects/APTS_Vendor__c/fields/APTS_Vendor_Acct_Group_Name__c.field-meta.xml
<CustomField>
    <fullName>APTS_Vendor_Acct_Group_Name__c</fullName>
    <description>Calculated based on Vendor Acct Group ID</description>
    <formula>IF( APTS_Vendor_Acct_Group_ID__c  = &apos;Z301&apos;, &apos;KCA Vendor&apos;, 
 IF( APTS_Vendor_Acct_Group_ID__c  = &apos;Z001&apos;, &apos;Kitz Group Vendor&apos;, 
 IF( APTS_Vendor_Acct_Group_ID__c  = &apos;Z304&apos;, &apos;Carrier&apos;,&apos;Other&apos;)
) 
)</formula>
    <inlineHelpText>Calculated based on Vendor Acct Group ID</inlineHelpText>
    <label>Vendor Account Group Name</label>
    <type>Text</type>
</CustomField>