DFfullcopybackup/force-app/main/default/objects/APTS_Vendor__c/fields/APTS_Vendor_City__c.field-meta.xml
<CustomField>
    <fullName>APTS_Vendor_City__c</fullName>
    <description>Vendor City from SAP</description>
    <inlineHelpText>Vendor City from SAP</inlineHelpText>
    <label>Vendor City</label>
    <length>75</length>
    <type>Text</type>
</CustomField>