DFfullcopybackup/force-app/main/default/objects/APTS_Vendor__c/fields/APTS_Vendor_Country__c.field-meta.xml
<CustomField>
    <fullName>APTS_Vendor_Country__c</fullName>
    <description>Vendor Country from SAP</description>
    <inlineHelpText>Vendor Country from SAP</inlineHelpText>
    <label>Vendor Country</label>
    <length>75</length>
    <type>Text</type>
</CustomField>