DFfullcopybackup/force-app/main/default/objects/APTS_Vendor__c/fields/APTS_Vendor_Name__c.field-meta.xml
<CustomField>
    <fullName>APTS_Vendor_Name__c</fullName>
    <description>Vendor Name from SAP</description>
    <inlineHelpText>Vendor Name from SAP</inlineHelpText>
    <label>Vendor Name</label>
    <length>75</length>
    <type>Text</type>
</CustomField>