DFfullcopybackup/force-app/main/default/objects/APTS_Vendor__c/fields/APTS_Vendor_Number__c.field-meta.xml
<CustomField>
    <fullName>APTS_Vendor_Number__c</fullName>
    <description>Vendor Number from SAP</description>
    <inlineHelpText>Vendor Number from SAP</inlineHelpText>
    <label>Vendor No</label>
    <length>8</length>
    <type>Text</type>
</CustomField>