DFfullcopybackup/force-app/main/default/objects/APTS_Vendor__c/fields/APTS_Vendor_State__c.field-meta.xml
<CustomField>
    <fullName>APTS_Vendor_State__c</fullName>
    <description>Vendor Region from SAP</description>
    <inlineHelpText>Vendor Region from SAP</inlineHelpText>
    <label>Vendor State</label>
    <length>75</length>
    <type>Text</type>
</CustomField>